# ntcdg

./: .gitignore  README.md  ntcdg_generator.py  pyproject.toml  requirements.txt  symbols.json  tui.py
custom_elements/: elements_config.json
src/ntcdg/: __init__.py  cli.py  config.py  finalize.py  generator.py  models.py  overlay.py  storage.py  symbols.py  tui.py  venice.py
tests/: test_finalize.py  test_models.py  test_overlay.py  test_storage.py  test_symbols_cli.py
